<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20sp">
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial"
        android:fontFamily="sans-serif-black"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/Text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:layout_marginTop="10sp"
        android:text="@string/tutorial_1_1"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Text1"
        android:layout_marginTop="10sp"
        android:text="@string/tutorial_1_2"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/Text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Text2"
        android:layout_marginTop="10sp"
        android:text="@string/tutorial_1_3"
        android:textColor="#000"
        />

    <TextView
        android:id="@+id/TextOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_ok"
        android:layout_below="@id/Text3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:textColor="#fff"
        android:background="@drawable/round_fiol"
        android:paddingRight="50sp"
        android:paddingLeft="50sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"

        />



</RelativeLayout>