<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
<TextView
    android:id="@+id/Text1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_single_tap"
    android:layout_centerHorizontal="true"
    android:textSize="20dp"
    android:textColor="#000000"
    android:fontFamily="sans-serif-medium"
    />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/BackImage"
        android:src="@drawable/ic_arrow_back_black_24dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Text1"
        android:layout_above="@id/adView"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<TextView
android:id="@+id/Text2"
android:layout_width="wrap_content"
android:layout_height="30dp"
android:text="@string/interval"
    android:fontFamily="sans-serif-medium"
android:layout_marginTop="20dp"
android:textSize="20dp"
android:textColor="#000000"/>
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/description_1"
android:layout_below="@id/Text2"
android:id="@+id/Text3"/>
<RelativeLayout
android:id="@+id/Rel1"
android:layout_marginTop="10dp"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_below="@id/Text3"
android:layout_centerHorizontal="true"
    >
<EditText
    android:id="@+id/EditTextInterval"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:lines="1"
    android:text="1000"
    android:gravity="center"
    android:maxLength="6"
    android:minEms="6"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@id/EditTextInterval"
    android:text="@string/millisec"
    android:textColor="#000000"
    android:layout_toRightOf="@id/EditTextInterval"
    /></RelativeLayout>

    <RelativeLayout
        android:id="@+id/Rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Rel1"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_when"
            android:textSize="20sp"
            android:textColor="#000"
            android:fontFamily="sans-serif-medium"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_below="@id/T1"
            android:checked="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/checkbox1"
            android:layout_below="@id/T1"
            android:text="@string/stop_t1"
            android:gravity="center"
            android:textColor="#000"/>


        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_below="@id/checkbox1"
            />
        <TextView
            android:id="@+id/T2"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/checkbox1"
            android:layout_below="@id/checkbox1"
            android:text="@string/stop_t2"
            android:gravity="center"
            android:textColor="#000"/>

        <TextView
        android:id="@+id/TimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="10sp"
        android:layout_toRightOf="@id/T2"
        android:layout_below="@id/checkbox1"
            android:layout_marginLeft="10sp"
        android:text="00:05:00"
        android:gravity="center"
        android:textColor="#0000ff "/>


        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_below="@id/checkbox2"
            />
        <TextView
            android:id="@+id/T3"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/checkbox3"
            android:layout_below="@id/checkbox2"
            android:text="@string/stop_t3"
            android:gravity="center"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/EditTextQuantity"
            android:layout_width="70sp"
            android:layout_marginLeft="10sp"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/T3"
            android:layout_below="@id/checkbox2"
            android:inputType="number"
            android:maxLines="1"
            android:gravity="center"
            android:textColor="#000"/>
    </RelativeLayout>

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rel3"
        android:layout_below="@id/Rel2"
        android:layout_marginTop="10sp"
        >
        <TextView
            android:id="@+id/RandTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_setting_title"
            android:textSize="20sp"
            android:textColor="#000"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_setting_text"
            android:layout_below="@id/RandTitle"
            android:id="@+id/RandText"/>

        <RelativeLayout

            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RandText"
            android:layout_centerHorizontal="true"
            >
        <EditText
            android:id="@+id/EditTextRandom"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:text="0"
            android:gravity="center"
            android:maxLength="6"
            android:minEms="6"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/EditTextRandom"
            android:text="@string/px"
            android:textColor="#000000"
            android:layout_toRightOf="@id/EditTextRandom"
            />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/TextViewSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Rel3"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_fiol"
        android:text="@string/save"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        />
</RelativeLayout>

</ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_in_app"/>
    </RelativeLayout>