<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/BackImage"
        android:src="@drawable/ic_arrow_back_black_24dp"
        />
    <ScrollView
        android:layout_above="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Text1"
        android:scrollbars="none"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst_text_1"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#000000"/>
    <RelativeLayout
        android:id="@+id/RelGroup1"
        android:layout_below="@id/Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_gray"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/AlertText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textColor="#000000"
            android:textSize="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/TextViewPurshape"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/AlertText1"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_fiol"
            android:text="@string/set_permission"
            android:gravity="center"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst_text_2"
        android:layout_below="@id/RelGroup1"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/TextViewPurshape2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Text3"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_fiol"
        android:text="@string/set_permission"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/Text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst_text_3"
        android:layout_below="@id/TextViewPurshape2"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/Text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst_text_4"
        android:layout_below="@id/Text4"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#000000"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Text5">
        <RelativeLayout
            android:id="@+id/R0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ><ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/Im0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_plus"/>
            <TextView
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/Im0"
                android:text="@string/opis_0"
                android:textColor="#000000"
                android:gravity="center_vertical"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/R0"
            android:id="@+id/R1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        ><ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/Im1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_target"/>
        <TextView
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/Im1"
            android:text="@string/opis_1"
            android:textColor="#000000"
            android:gravity="center_vertical"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/R2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/R1"
            >
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/Im2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/play"/>
        <TextView
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Im2"
            android:text="@string/opis_2"
            android:textColor="#000000"
            android:gravity="center_vertical"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/R3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/R2"
            >
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/Im3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/stop"/>
        <TextView
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Im3"
            android:text="@string/opis_3"
            android:textColor="#000000"
            android:gravity="center_vertical"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/R4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/R3"
            >
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/Im4"

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/close"/>
        <TextView
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Im4"
            android:text="@string/opis_4"
            android:textColor="#000000"
            android:gravity="center_vertical"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/R5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/R4"
            >
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/Im5"

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_settings"/>
            <TextView
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Im5"
                android:text="@string/opis_5"
                android:textColor="#000000"
                android:gravity="center_vertical"/>
        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_in_app"/>
</RelativeLayout>