<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp">
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_work"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        />
    <RelativeLayout
        android:layout_marginTop="10sp"
        android:id="@+id/RelGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_gray"
        android:padding="10dp"
        android:layout_below="@id/Title"
        >
        <TextView
            android:id="@+id/AlertText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_work_title_1"
            android:textColor="#000000"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/TextViewPurshape"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/AlertText1"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_fiol"
            android:text="@string/restart"
            android:gravity="center"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10sp"
        android:id="@+id/RelGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_gray"
        android:padding="10dp"
        android:layout_below="@id/RelGroup1"
        >
        <TextView
            android:id="@+id/AlertText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_work_title_2"
            android:textColor="#000000"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/TextViewPurshape2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/AlertText2"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_fiol"
            android:text="@string/set_permission"
            android:gravity="center"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            />

    </RelativeLayout>
</RelativeLayout>