<RelativeLayout android:id="@+id/RelGroup1"
    android:layout_below="@id/Text2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_title"
        android:fontFamily="sans-serif-black"
        android:textColor="#000000"
        android:textSize="20dp"
        />
    <TextView
        android:layout_marginTop="10sp"
        android:layout_below="@id/Title"
        android:id="@+id/AlertText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textColor="#000000"
        android:textSize="15dp"
        />
    <TextView
        android:id="@+id/TextViewPurshape"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/AlertText1"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_fiol"
        android:text="@string/set_permission"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff"
        />

</RelativeLayout>